# cqgothic

./: README.md  changes.md  example_runner.py  pyproject.toml
example/: bunker.py  bunker2.py  bunker3.py  bunker4_large_inset.py  bunker5_chamfer_flat_roof.py  bunker6_test_for_drift.py  bunkerPlate.py  bunker_med.py  bunker_small.py  bunker_small_custom_door.py  bunker_small_flatroof.py  catwalk.py  flat_roof.py  roof.py  tower.py
src/cqgothic/: Bunker.py  DetailedRoof.py  FlatRoof.py  SeriesHelper.py  Tower.py  __init__.py  bunkerBody.py  bunkerDoors.py
stl/: bunker4_large_inset.stl  bunker_med_roof.stl  bunker_small_custom_door.stl  catwalk.stl  flat_roof.stl
