[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cqgothic"
version = "1.1.0"
authors = [
  { name="James Adams", email="inklink28@gmail.com" }
]
description = "Python Library for building gothic wargame terrain"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

dependencies = [
'cqterrain @ git+https://github.com/medicationforall/cqterrain@3.5.2'
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqgothic"
"Bug Tracker" = "https://github.com/medicationforall/cqgothic/issues"
